# ngydv

./: .travis.yml  Cargo.toml  README.md  appveyor.yml
ci/: before_deploy.sh
src/: client.rs  env.rs  error.rs  file.rs  main.rs  opts.rs  profile.rs
src/client/: assume_role.rs  create_session.rs  raw_provider.rs  util.rs
src/file/: aws_setting.rs  credentials.rs
src/profile/: collection.rs  export.rs  show.rs
