[package]
name = "ngydv"
version = "0.1.4"
license = "Apache-2.0"
authors = ["K2Da <id.k2da@gmail.com>"]
edition = "2018"
description = "A tool to store/restore aws cli credential"
readme = "README.md"
homepage = "https://github.com/K2Da/ngydv"
repository = "https://github.com/K2Da/ngydv"
keywords = ["aws", "cli"]

[dependencies]
tokio = { version = "0.2", features = ["full"] }
structopt = "0.3"
rusoto_core = "0.43"
rusoto_ec2 = "0.43"
rusoto_credential = "0.43"
rusoto_sts = "0.43"
rust-ini = "0.15"
dirs = "2.0"
async-trait = "0.1"
chrono = "0.4.11"
prettytable-rs = "^0.8"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
envy = "0.4"
thiserror = "1.0"
